tests/errors/2_syntax_errors/wrong_expression.java
class Main {
    static int a = 52;
    static void run() {
        if (5+3 > +5) {}
    }
}
